--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -543,7 +543,7 @@ header {
         
         <!-- Latest Movies Section -->
         <h2 class="section-title">Latest Movies</h2>
-        <div class="full-width-poster-container">
+        <div class="latest-movies-wrapper">
             <div class="latest-movies">
                 {% for movie in latest_movies %}
                 <div class="latest-movie">
