--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -498,7 +498,11 @@ header {
         <a href="{% url 'horror_movies' %}">Horror</a>
         <a href="{% url 'investigative_movies' %}">Investigative</a>
         <a href="{% url 'romance_movies' %}">Romance</a>
+        <a href="{% url 'family_movies' %}">Family</a>
         <a href="{% url 'scifi_movies' %}">Sci-fi</a>
+        <a href="{% url 'thriller_movies' %}">Thriller</a>
+        <a href="{% url 'history_movies' %}">History</a>
+        <a href="{% url 'Documentary_movies' %}">Documentary</a>
         <a href="{% url 'series_movies' %}">Series</a>
     </div>
 
@@ -603,6 +607,25 @@ header {
             {% endfor %}
         </div>
 
+        <!-- Family Movies Section -->
+        <h2 class="section-title">Family Movies</h2>
+        <div class="movies">
+            {% for movie in family_movies %}
+                <div class="movie">
+                    <a href="{% url 'movie_details' pk=movie.id %}">
+                        <img src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}" alt="{{ movie.title }} Poster">
+                        <div class="movie-info">
+                            <h3>{{ movie.title }}</h3>
+                            <p>{{ movie.release_date }}</p>
+                        </div>
+                    </a>
+                    <div class="recommended-movie-title">
+                        <h2>{{ movie.title }}</h2>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+
         <!-- Drama Movies Section -->
         <h2 class="section-title">Drama Movies</h2>
         <div class="movies">
@@ -683,6 +706,63 @@ header {
         <h2 class="section-title">Sci-fi Movies</h2>
         <div class="movies">
             {% for movie in scifi_movies %}
+                <div class="movie">
+                    <a href="{% url 'movie_details' pk=movie.id %}">
+                        <img src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}" alt="{{ movie.title }} Poster">
+                        <div class="movie-info">
+                            <h3>{{ movie.title }}</h3>
+                            <p>{{ movie.release_date }}</p>
+                        </div>
+                    </a>
+                    <div class="recommended-movie-title">
+                        <h2>{{ movie.title }}</h2>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+
+        <!-- Action Movies Section -->
+        <h2 class="section-title">Thriller Movies</h2>
+        <div class="movies">
+            {% for movie in thriller_movies %}
+                <div class="movie">
+                    <a href="{% url 'movie_details' pk=movie.id %}">
+                        <img src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}" alt="{{ movie.title }} Poster">
+                        <div class="movie-info">
+                            <h3>{{ movie.title }}</h3>
+                            <p>{{ movie.release_date }}</p>
+                        </div>
+                    </a>
+                    <div class="recommended-movie-title">
+                        <h2>{{ movie.title }}</h2>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+
+        <!-- History Movies Section -->
+        <h2 class="section-title">History Movies</h2>
+        <div class="movies">
+            {% for movie in history_movies %}
+                <div class="movie">
+                    <a href="{% url 'movie_details' pk=movie.id %}">
+                        <img src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}" alt="{{ movie.title }} Poster">
+                        <div class="movie-info">
+                            <h3>{{ movie.title }}</h3>
+                            <p>{{ movie.release_date }}</p>
+                        </div>
+                    </a>
+                    <div class="recommended-movie-title">
+                        <h2>{{ movie.title }}</h2>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+
+        <!-- Documentary Movies Section -->
+        <h2 class="section-title">Documentary Movies</h2>
+        <div class="movies">
+            {% for movie in documentary_movies %}
                 <div class="movie">
                     <a href="{% url 'movie_details' pk=movie.id %}">
                         <img src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}" alt="{{ movie.title }} Poster">
