--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -565,6 +565,25 @@ header {
             {% endfor %}
         </div>
 
+        <!-- Adventure Movies Section -->
+        <h2 class="section-title">Adventure Movies</h2>
+        <div class="movies">
+            {% for movie in adventure_movies %}
+                <div class="movie">
+                    <a href="{% url 'movie_details' pk=movie.id %}">
+                        <img src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}" alt="{{ movie.title }} Poster">
+                        <div class="movie-info">
+                            <h3>{{ movie.title }}</h3>
+                            <p>{{ movie.release_date }}</p>
+                        </div>
+                    </a>
+                    <div class="recommended-movie-title">
+                        <h2>{{ movie.title }}</h2>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+
         <!-- Animation Movies Section -->
         <h2 class="section-title">Animation Movies</h2>
         <div class="movies">
@@ -724,6 +743,44 @@ header {
         <h2 class="section-title">Sci-fi Movies</h2>
         <div class="movies">
             {% for movie in scifi_movies %}
+                <div class="movie">
+                    <a href="{% url 'movie_details' pk=movie.id %}">
+                        <img src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}" alt="{{ movie.title }} Poster">
+                        <div class="movie-info">
+                            <h3>{{ movie.title }}</h3>
+                            <p>{{ movie.release_date }}</p>
+                        </div>
+                    </a>
+                    <div class="recommended-movie-title">
+                        <h2>{{ movie.title }}</h2>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+
+        <!-- Documentar Movies Section -->
+        <h2 class="section-title">Documentary Movies</h2>
+        <div class="movies">
+            {% for movie in documentary_movies %}
+                <div class="movie">
+                    <a href="{% url 'movie_details' pk=movie.id %}">
+                        <img src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}" alt="{{ movie.title }} Poster">
+                        <div class="movie-info">
+                            <h3>{{ movie.title }}</h3>
+                            <p>{{ movie.release_date }}</p>
+                        </div>
+                    </a>
+                    <div class="recommended-movie-title">
+                        <h2>{{ movie.title }}</h2>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+
+        <!-- History Movies Section -->
+        <h2 class="section-title">History Movies</h2>
+        <div class="movies">
+            {% for movie in history_movies %}
                 <div class="movie">
                     <a href="{% url 'movie_details' pk=movie.id %}">
                         <img src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}" alt="{{ movie.title }} Poster">
