--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -718,6 +718,25 @@ header {
             {% endfor %}
         </div>
 
+        <!-- Crime Movies Section -->
+        <h2 class="section-title">Crime Movies</h2>
+        <div class="movies">
+            {% for movie in crime_movies %}
+                <div class="movie">
+                    <a href="{% url 'movie_details' pk=movie.id %}">
+                        <img src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}" alt="{{ movie.title }} Poster">
+                        <div class="movie-info">
+                            <h3>{{ movie.title }}</h3>
+                            <p>{{ movie.release_date }}</p>
+                        </div>
+                    </a>
+                    <div class="recommended-movie-title">
+                        <h2>{{ movie.title }}</h2>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+
         <!-- Romance Movies Section -->
         <h2 class="section-title">Romance Movies</h2>
         <div class="movies">
