--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -337,7 +337,7 @@ header {
 
         <h2 style="margin-bottom: 20px;">More Like This</h2>
         <div class="recommended-movies">
-            {% for recommended_movie in movie_recommendations %}
+            {% for movie in recommended_movies %}
                 <div class="recommended-movie">
                     <a href="{% url 'movie_details' pk=recommended_movie.id %}">
                         <img src="{{ recommended_movie.poster }}" alt="{{ recommended_movie.title }} Poster">
