--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -500,6 +500,7 @@ header {
         <a href="{% url 'romance_movies' %}">Romance</a>
         <a href="{% url 'scifi_movies' %}">Sci-fi</a>
         <a href="{% url 'series_movies' %}">Series</a>
+        <a href="{% url 'series' %}">Series</a>
     </div>
 
     <div class="container main">
