--- a/moviedb/templates/series.html
+++ b/moviedb/templates/series.html
@@ -549,7 +549,7 @@ header {
         <!-- Action series Section -->
         <h2 class="section-title">Action series</h2>
         <div class="series">
-            {% for serie in Action %}
+            {% for serie in action_series %}
                 <div class="serie">
                     <a href="{% url 'serie_details' pk=serie.id %}">
                         <img src="https://image.tmdb.org/t/p/w500{{ serie.poster_path }}" alt="{{ serie.title }} Poster">
@@ -568,7 +568,7 @@ header {
         <!-- Animation series Section -->
         <h2 class="section-title">Animation series</h2>
         <div class="series">
-            {% for serie in Animation %}
+            {% for serie in animation_series %}
                 <div class="serie">
                     <a href="{% url 'serie_details' pk=serie.id %}">
                         <img src="https://image.tmdb.org/t/p/w500{{ serie.poster_path }}" alt="{{ serie.title }} Poster">
@@ -587,7 +587,7 @@ header {
         <!-- History series Section -->
         <h2 class="section-title">Kids series</h2>
         <div class="series">
-            {% for serie in Kids %}
+            {% for serie in soap_series %}
                 <div class="serie">
                     <a href="{% url 'serie_details' pk=serie.id %}">
                         <img src="https://image.tmdb.org/t/p/w500{{ serie.poster_path }}" alt="{{ serie.title }} Poster">
@@ -607,7 +607,7 @@ header {
         <!-- Family series Section -->
         <h2 class="section-title">Family series</h2>
         <div class="series">
-            {% for serie in Family %}
+            {% for serie in family_series %}
                 <div class="serie">
                     <a href="{% url 'serie_details' pk=serie.id %}">
                         <img src="https://image.tmdb.org/t/p/w500{{ serie.poster_path }}" alt="{{ serie.title }} Poster">
@@ -626,7 +626,7 @@ header {
         <!-- Comedy series Section -->
         <h2 class="section-title">Comedy series</h2>
         <div class="series">
-            {% for serie in Comedy %}
+            {% for serie in comedy_series %}
                 <div class="serie">
                     <a href="{% url 'serie_details' pk=serie.id %}">
                         <img src="https://image.tmdb.org/t/p/w500{{ serie.poster_path }}" alt="{{ serie.title }} Poster">
@@ -645,7 +645,7 @@ header {
         <!-- Drama series Section -->
         <h2 class="section-title">Drama series</h2>
         <div class="series">
-            {% for serie in Drama %}
+            {% for serie in drama_series %}
                 <div class="serie">
                     <a href="{% url 'serie_details' pk=serie.id %}">
                         <img src="https://image.tmdb.org/t/p/w500{{ serie.poster_path }}" alt="{{ serie.title }} Poster">
@@ -664,7 +664,7 @@ header {
         <!-- Horror series Section -->
         <h2 class="section-title">Reality series</h2>
         <div class="series">
-            {% for serie in Reality %}
+            {% for serie in reality_series %}
                 <div class="serie">
                     <a href="{% url 'serie_details' pk=serie.id %}">
                         <img src="https://image.tmdb.org/t/p/w500{{ serie.poster_path }}" alt="{{ serie.title }} Poster">
@@ -683,7 +683,7 @@ header {
         <!-- Investigative series Section -->
         <h2 class="section-title">Mystery series</h2>
         <div class="series">
-            {% for serie in Mystery %}
+            {% for serie in mystery_series %}
                 <div class="serie">
                     <a href="{% url 'serie_details' pk=serie.id %}">
                         <img src="https://image.tmdb.org/t/p/w500{{ serie.poster_path }}" alt="{{ serie.title }} Poster">
@@ -702,7 +702,7 @@ header {
         <!-- Crime series Section -->
         <h2 class="section-title">Crime series</h2>
         <div class="series">
-            {% for serie in Crime %}
+            {% for serie in crime_series %}
                 <div class="serie">
                     <a href="{% url 'serie_details' pk=serie.id %}">
                         <img src="https://image.tmdb.org/t/p/w500{{ serie.poster_path }}" alt="{{ serie.title }} Poster">
@@ -721,7 +721,7 @@ header {
         <!-- Romance series Section -->
         <h2 class="section-title">History series</h2>
         <div class="series">
-            {% for serie in Politics %}
+            {% for serie in politics_series %}
                 <div class="serie">
                     <a href="{% url 'serie_details' pk=serie.id %}">
                         <img src="https://image.tmdb.org/t/p/w500{{ serie.poster_path }}" alt="{{ serie.title }} Poster">
@@ -742,7 +742,7 @@ header {
         <!-- Sci-fi series Section -->
         <h2 class="section-title">Sci-fi series</h2>
         <div class="series">
-            {% for serie in Sci-Fi %}
+            {% for serie in scifi_series %}
                 <div class="serie">
                     <a href="{% url 'serie_details' pk=serie.id %}">
                         <img src="https://image.tmdb.org/t/p/w500{{ serie.poster_path }}" alt="{{ serie.title }} Poster">
@@ -761,7 +761,7 @@ header {
         <!-- Documentar series Section -->
         <h2 class="section-title">Documentary series</h2>
         <div class="series">
-            {% for serie in Documentary %}
+            {% for serie in documentary_series %}
                 <div class="serie">
                     <a href="{% url 'serie_details' pk=serie.id %}">
                         <img src="https://image.tmdb.org/t/p/w500{{ serie.poster_path }}" alt="{{ serie.title }} Poster">
@@ -780,7 +780,7 @@ header {
         <!-- History series Section -->
         <h2 class="section-title">Soap series</h2>
         <div class="series">
-            {% for serie in Soap %}
+            {% for serie in soap_series %}
                 <div class="serie">
                     <a href="{% url 'serie_details' pk=serie.id %}">
                         <img src="https://image.tmdb.org/t/p/w500{{ serie.poster_path }}" alt="{{ serie.title }} Poster">
