--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -470,7 +470,7 @@ header {
 <body>
     <header>
         <button class="openbtn" onclick="openNav()">☰</button>
-        <div class="logo">Wayne's Movie Site</div>
+        <div class="logo">Ease-E-Movies</div>
         <div class="navbar">
             <a href="#">Home</a>
             <a href="#">Categories</a>
