--- a/moviedb/templates/series.html
+++ b/moviedb/templates/series.html
@@ -267,7 +267,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">Wayne's Movie Site</div>
+        <div class="logo">Ease-E-Movies</div>
         <nav class="navbar">
             <a href="#">Home</a>
             <a href="#">TV Shows</a>
