--- a/moviedb/templates/series.html
+++ b/moviedb/templates/series.html
@@ -300,7 +300,7 @@
 
     <div class="main">
         {% load cache %}
-        {% cache 600 movie_list %}
+        {% cache 600 series_list %}
         <h1 class="section-title">TV Series</h1>
 
         <!-- Latest Series -->
